--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "make",
             "type": "shell",
-            "command": "make -B",
+            "command": "make",
             "group": "build",
             "problemMatcher": "$gcc"
         }
